tests/ui/issues/issue-50688.stderr
error[E0308]: mismatched types
  --> $DIR/issue-50688.rs:2:9
   |
LL |     [1; || {}];
   |         ^^^^^ expected `usize`, found closure
   |
   = note: expected type `usize`
           found closure `{closure@$DIR/issue-50688.rs:2:9: 2:11}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
