tests/ui/issues/issue-50688.rs
fn main() {
    [1; || {}]; //~ ERROR mismatched types
}
